# rdkb-Utopia

./: .gitlab-ci.yml  configure.ac
source/: Makefile.am
source/firewall/: firewall.c
source/igd/src/: igd_action_port_mapping.c  igd_platform_independent_inf.c  igd_service_wan_connect.c  igd_utility.c
source/igd/src/inc/: igd_action_port_mapping.h  igd_platform_dependent_inf.h  igd_platform_independent_inf.h
source/include/utapi/: utapi.h
source/include/utctx/: utctx_api.h
source/naptr_parser/: Makefile.am  naptr_parser.c  naptr_parser.h
source/scripts/init/c_registration/: 02_lanHandler.c  02_naptr_parser.c  15_dynamic_dns.c  Makefile.am
source/scripts/init/service.d/: hostname_functions.sh  lan_handler.sh  service_bridge_arm.sh  service_bridge_rpi.sh  service_crond.sh  service_dhcp_server.sh  service_dhcpv6_client_arm.sh  service_igd.sh  service_ipv4.sh  service_ntpd.sh  service_routed.sh  service_sshd.sh  set_hostname.sh
source/scripts/init/service.d/service_dhcp_server/: dhcp_server_functions.sh
source/scripts/init/service.d/service_firewall/: firewall_log_handle.sh
source/scripts/init/service.d/service_wan/: ppp_helpers.sh
source/scripts/init/system/: utopia_init.sh
source/service_dhcp/: dhcp_server_functions.c
source/service_multinet/: service_multinet_lib.c
source/service_routed/: service_routed.c
source/service_udhcpc/: Makefile.am  service_udhcpc.c
source/service_wan/: service_wan.c
source/syscfg/lib/: syscfg_lib.c
source/utapi/lib/: utapi.c  utapi.h  utapi_tr_user.c  utapi_tr_user.h
source/utctx/lib/: utctx.c  utctx_api.h
(+6 files in other folders)
